EDIT main page (responsive)

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__content-left">
-					<img class="header__logo" src="../boilerplate/img/site_logo.png" alt="SH">
+					<img class="header__logo" src="images/site_logo.png" alt="SH">
 					<nav class="navigation">
 						<a href="#">Woman</a>
 						<a href="men-all-category.html">Men</a>
@@ -87,16 +87,14 @@
 				</div>
 				<div class="mobile__menu">
 					<div class="menu__row"></div>
-					<div class="menu__row"></div>
-					<div class="menu__row"></div>
 				</div>
 				<div class="header__content-right">
 					<menu class="header__menu">
 						<a class="header__login" href="#">Log In</a>
 						<a class="header__basket" href="#">Basket (0)</a>
+						<input class="search-area" type="text" placeholder="Search">
 						<a class="header__search_btn" href= "#">
-							<img class="header__search-btn-img" src="../boilerplate/img/Screenshot 2019-10-31 at 15.41.46.png" alt="">
-							
+							<img class="header__search-btn-img" src="images/Screenshot 2019-10-31 at 15.41.46.png" alt="">
 						</a>	
 					</menu>
 				</div>
@@ -240,17 +238,21 @@
 	<section class="carousel">
 		<div class="container">
 			<div class="carousel__inner">
-				<div class="carousel__item carousel__item-1"><img src="img/ProfilePic_BlackSubmark-03_100x100.png"
+					<div class="carousel__item carousel__item-1"><img src="images/ProfilePic_BlackSubmark-03_100x100.png"
 						alt=""></div>
-				<div class="carousel__item carousel__item-2"><img src="img/ProfilePic_BlackSubmark-03_100x100.png"
+				<div class="carousel__item carousel__item-2"><img src="images/ProfilePic_BlackSubmark-03_100x100.png"
 						alt=""></div>
-				<div class="carousel__item carousel__item-3"><img src="img/ProfilePic_BlackSubmark-03_100x100.png"
+				<div class="carousel__item carousel__item-3"><img src="images/ProfilePic_BlackSubmark-03_100x100.png"
 						alt=""></div>
-				<div class="carousel__item carousel__item-4"><img src="img/ProfilePic_BlackSubmark-03_100x100.png"
+				<div class="carousel__item carousel__item-4"><img src="images/ProfilePic_BlackSubmark-03_100x100.png"
 						alt=""></div>
-				<div class="carousel__item carousel__item-4"><img src="img/ProfilePic_BlackSubmark-03_100x100.png"
+				<div class="carousel__item carousel__item-5"><img src="images/ProfilePic_BlackSubmark-03_100x100.png"
 						alt=""></div>
-				<div class="carousel__item carousel__item-4"><img src="img/ProfilePic_BlackSubmark-03_100x100.png" alt=""></div>
+				<div class="carousel__item carousel__item-6"><img src="images/ProfilePic_BlackSubmark-03_100x100.png" 
+						alt=""></div>
+						<div class="carousel__item carousel__item-7"><img src="images/ProfilePic_BlackSubmark-03_100x100.png"
+							alt=""></div>
+							
 			</div>
 		</div>
 	</section>
@@ -258,18 +260,18 @@
 	<!-- FOOTER -->
 	<footer class="footer">
 		<div class="container">
-			<div class="colection">
+			<div class="footer__list list-colection">
 				<ul>
-					<h2>COLECTION</h2>
+					<span>COLECTION</span> 
 					<li><a href="woman_all-category.html">Woman (1725)</a></li>
 					<li><a href="men-all-category.html">Men (635)</a></li>
 					<li><a href="kids_all-category.html">Kids (2514)</a></li>
 					<li><a href="#">Comming Soon (76)</a></li>
 				</ul>
 			</div>
-			<div class="site">
+			<div class="footer__list list-site">
 				<ul>
-					<h2>SITE</h2>
+					<span>SITE</span>
 					<li><a href="#">Terms of Service</a></li>
 					<li><a href="#">Privacy Policy</a></li>
 					<li><a href="#">Copyright Policy</a></li>
@@ -277,21 +279,21 @@
 					<li><a href="#">Support</a></li>
 				</ul>
 			</div>
-			<div class="shop">
+			<div class="footer__list list-shop">
 				<ul>
-					<h2>SHOP</h2>
+					<span>SHOP</span>					
 					<li><a href="about-us.html">About Us</a></li>
 					<li><a href="#">Shipping Metods</a></li>
 					<li><a href="#">Creer</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
-			<div class="social">
-				<h2>SOCIAL</h2>
+			<div class="footer__list list-social">
+				<span>SOCIAL</span> 
 				<p>Shoper is made with love in Warsaw, 2014 © All rights reserved. El passion</p>
-				<a class="twitter" href="https://twitter.com/?lang=pt_pt"></a>
-				<a class="facebook" href="https://www.facebook.com/?ref=logo"></a>
-				<a class="instagram" href="https://www.instagram.com/"></a>
+				<a class="social-link twitter-icon" href="https://twitter.com/?lang=pt_pt"></a>
+				<a class="social-link facebook-icon" href="https://www.facebook.com/?ref=logo"></a>
+				<a class="social-link instagram-icon" href="https://www.instagram.com/"></a>
 			</div>
 		</div>
 	</footer>
